--- a/index.html
+++ b/index.html
@@ -105,9 +105,29 @@
         <div class="conteiner">
         <h2 class="work-title">Чем мы занимаемся</h2>
         <ul class="list work-conteiner">
-            <li class="list-work"><img src="img/img.jpg" width="370" alt="Разрабатка программы"></li>
-            <li class="list-work"><img src="img/box1.jpg" width="370" alt="Мобильное приложение"></li>
-            <li class="list-work"><img src="img/img1.jpg" width="370" alt="Дизайн"></li>
+        <div class="work-title-conteiner">
+            <li class="list-work"><img src="img/box1.jpg" width="370" alt="Разрабатка программы">
+            <div class="img-work-conainer">
+                <p class="text-work-conteiner">Десктопные приложения</p>
+            </div>
+        </div>
+            </li>
+
+            <div class="work-title-conteiner">
+            <li class="list-work"><img src="img/img.jpg" width="370" alt="Мобильное приложение">
+                <div class="img-work-conainer">
+                    <p class="text-work-conteiner">Мобильные приложения</p>
+                </div>
+            </div>
+            </li>
+             
+            <div class="work-title-conteiner">
+            <li class="list-work"><img src="img/img1.jpg" width="370" alt="Дизайн">
+                <div class="img-work-conainer">
+                    <p class="text-work-conteiner">Дизайнерские решения</p>
+                </div>
+            </div>
+            </li>
         </ul>
     </div>
     </section>
