--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
     <div class="modal ">
         <button class="close" data-modal-close>
             <svg class="close-img ">
-                <use href="./img/SVG/icons.svg#envelope"></use>
+                <use href="./img/SVG/icons.svg#close"></use>
             </svg>
         </button>
     </div>
