--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
                 <a class="link"  href="index.html">Студия</a>
             </li>
             <li class="item">
-                <a class="link" href="portfolio.html">Портфолио</a>
+                <a class="link link-portfolio" href="portfolio.html">Портфолио</a>
             </li>
             <li class="item">
                 <a class="link" href="#">Контакты</a>
