--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a href="index.html" class="logo"><span class="web">Web</span>Studio</a>
     <ul class="site-nav list">
         <li class="item">
-            <a class="link link-index"  href="index.html">Студия</a>
+            <a class="link current"  href="index.html">Студия</a>
         </li>
         <li class="item">
             <a class="link" href="portfolio.html">Портфолио</a>
